--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,19 @@
+*{
+    box-sizing:border-box;
+}
+
+html {
+    background-color: lightblue;
+}
+
 h1, header h2{
     text-align: center;
+    margin: 1.5%;
 }
 
 main h2 {
-    text-align: left;
+    text-align: center;
+    margin: 4%;
 }
 
 body {
@@ -13,6 +23,175 @@ body {
     font-family: 'Raleway', sans-serif;
 }
 
+main {
+    display: flex;
+    justify-content: center;
+    margin: 1% 10% 0 10%;
+}
+
+#firstBox, #secondBox, #thirdBox {
+    flex: 1;
+    padding-bottom: 1em;
+    margin: 1%;
+    text-align: center;
+    border-style:dotted;
+    border-color: white;
+    border-width: 7px;
+} 
+
+ul {
+    padding: 0;
+}
+
+ul li {
+    text-align:center;
+    padding: 1% 0 1% 0;
+    list-style: none;
+}
+
+ul li a {
+    display:block;
+    background-color: white;
+    padding: 1%;
+    margin: 0 10% 0 10%;
+    border-radius: 5px;
+    text-decoration: none;
+    color:black;
+}
+
+@keyframes bounce {
+    0% {transform: rotateY(0deg);}
+    40% {transform: rotate(-10deg);}
+    70% {transform: rotate(1deg);}
+    80% {transform: rotate(-3deg);}
+}
+
+ul li a:hover {
+    animation: bounce 1s;
+}
+
+footer p {
+    display: inline-block;
+    margin: 0.7% 3% 1% 3%;
+}
+
+footer p, footer p a {
+    text-decoration: none;
+    color: black;
+}
+
+#banner{
+    position: relative;
+    width: 80%;
+    aspect-ratio: 4.4 / 1;
+    max-width: 1100px;
+    max-height:250px;
+    margin: auto;
+    overflow: hidden;
+    background-image: url(images/bannerBkgd.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+#dot1, #dot2, #dot3, #dot4, #dot5, #dot6 {
+    position: absolute;
+}
+
+#dot1 {
+    top: 40%;
+    left: 13%;
+    width: 20%;
+    height: 20%;
+}
+
+#dot1 img {
+    width: 90%;
+}
+
+#dot1 img:hover {
+    transform: scale(1.3) rotate(250deg);
+    transition: 1s;
+}
+
+#dot2 {
+    top: 5%;
+    left: 30%;
+    width: 15%;
+    height: 10%;
+}
+
+#dot2 img {
+    width: 90%;
+}
+
+#dot2 img:hover {
+    transform: scale(1.3) rotate(-180deg);
+    transition: 1s;
+}
+
+#dot3 {
+    top: 58%;
+    left: 30%;
+    width: 40%;
+    height: 10%;
+}
+
+#dot3 img{
+    width: 80%;
+}
+
+#dot3 img:hover {
+    transform: scale(1.2) rotate(290deg);
+    transition: 1s;
+}
+
+#dot4 {
+    top: 30%;
+    left: 55%;
+    width: 10%;
+    height: 10%;
+}
+
+#dot4 img {
+    width: 90%;
+}
+
+#dot4 img:hover {
+    transform: scale(1.2) rotate(290deg);
+    transition: 1s;
+}
+
+#dot5 {
+    top: 17%;
+    left: 62%;
+    width: 30%;
+    height: 30%;
+}
+
+#dot5 img {
+    width: 70%;
+}
+
+#dot5 img:hover {
+    transform: scale(1.3) rotate(-200deg);
+    transition: 1s;
+}
+
+#dot6 {
+    top: -30%;
+    left: 80%;
+    width: 15%;
+    height: 10%;
+}
+
+#dot6 img {
+    width: 90%;
+}
+
+#dot6 img:hover {
+    transform: scale(1.2) rotate(290deg);
+    transition: 1s;
+}
 
 @media only screen and (max-width: 799px) {
     header {
@@ -20,17 +199,17 @@ body {
     }
 
     body {
-      background-color: lightblue;
-      flex-direction: column;
+        background-color: lightblue;
+        flex-direction: column;
     }
 
     main h2 {
         text-align: center;
     }
 
-    img {
-        max-width: 75%;
-        }
+    main {
+        flex-direction:column;
+    }
 
     ul {
         margin: 0;
@@ -44,42 +223,21 @@ body {
     }
 
     ul li a {
+        display:block;
         background-color: white;
-        padding: 5px;
+        padding: 8px;
+        margin: 0 10% 0 10%;
         border-radius: 5px;
         text-decoration: none;
         color:black;
     }
 
-    @keyframes bounce {
-        0% {transform: rotateY(0deg);}
-        15% {transform: rotate(-10deg);}
-        20% {transform: rotate(10deg);}
-    }
-
-    /* hover doesn't work on ul li a, but it does work on ul li */
-    ul li a:hover {
-        animation: bounce 1s;
-    }
-
-    footer {
-        text-align: center;
-        margin: 5%;
-    }
-
-    footer p {
-        padding: 1%;
-        margin: 0;
-    }
-
-    footer a {
-        color:black;
-        text-decoration:none;
+    footer p{
+        margin: 3% 3% 3% 3%;
     }
 
     #firstBox, #secondBox, #thirdBox {
         flex: 1;
-        flex-direction:column;
         padding-bottom: 2em;
         margin: 5% 15% 0 15%;
         border-style:dotted;
@@ -87,26 +245,17 @@ body {
         border-width: 5px;
     } 
 
-    /* There are two issues and 
-    1) the dots are supposed to be overflow-hidden, but the cut off is not exactly where I want it to be
-    2) I want to keep the dots in place and resize when the screen size changes */
     #banner{
         position: relative;
         width: 80%;
+        aspect-ratio: 4.4 / 1;
+        max-width: 1100px;
+        max-height:250px;
         margin: auto;
         overflow: hidden;
-    }
-
-    #bannerBkgd{
-        width: 100%;
-        max-width: 799px;
-        max-height: 100%;
-    }
-
-    #bannerBkgd img {
-        max-width: 100%;
-        max-height: 100%;
-        overflow: hidden;
+        background-image: url(images/bannerBkgd.png);
+        background-repeat: no-repeat;
+        background-size: 100%;
     }
 
     #dot1, #dot2, #dot3, #dot4, #dot5, #dot6 {
@@ -114,41 +263,34 @@ body {
     }
 
     #dot1 {
-        top: 60px;
-        left: 70px;
-        height: auto;
-    }
-
-    #dot1 img {
-        width: 90%;
+        top: 40%;
+        left: 13%;
+        width: 20%;
+        height: 20%;
     }
 
     #dot1 img:hover {
-        transform: scale(1.5) rotate(250deg);
+        transform: scale(1.3) rotate(250deg);
         transition: 1s;
     }
 
     #dot2 {
-        top: 10px;
-        left: 160px;
-    }
-
-    #dot2 img {
-        width: 70%;
+        top: 10%;
+        left: 30%;
+        width: 15%;
+        height: 10%;
     }
 
     #dot2 img:hover {
-        transform: scale(1.5) rotate(-180deg);
+        transform: scale(1.3) rotate(-180deg);
         transition: 1s;
     }
 
     #dot3 {
-        top: 80px;
-        left: 130px;
-    }
-
-    #dot3 img {
-        width: 70%;
+        top: 58%;
+        left: 30%;
+        width: 40%;
+        height: 10%;
     }
 
     #dot3 img:hover {
@@ -157,44 +299,38 @@ body {
     }
 
     #dot4 {
-        top: 30px;
-        left: 330px;
-    }
-
-    #dot4 img {
-        width: 85%;
+        top: 30%;
+        left: 55%;
+        width: 10%;
+        height: 10%;
     }
 
     #dot4 img:hover {
-        transform: scale(1.5) rotate(290deg);
+        transform: scale(1.2) rotate(290deg);
         transition: 1s;
     }
 
     #dot5 {
-        top: 60px;
-        left: 350px;
-    }
-
-    #dot5 img {
-        width: 40%;
+        top: 9%;
+        left: 62%;
+        width: 30%;
+        height: 30%;
     }
 
     #dot5 img:hover {
-        transform: scale(1.8) rotate(-200deg);
+        transform: scale(1.3) rotate(-200deg);
         transition: 1s;
     }
 
     #dot6 {
-        top: -80px;
-        left: 400px;
-    }
-
-    #dot6 img {
-        width: 90%;
+        top: -30%;
+        left: 80%;
+        width: 15%;
+        height: 10%;
     }
 
     #dot6 img:hover {
-        transform: scale(1.5) rotate(290deg);
+        transform: scale(1.2) rotate(290deg);
         transition: 1s;
     }
 
