--- a/journal/styles.css
+++ b/journal/styles.css
@@ -1,10 +1,9 @@
-h1{
-    margin: 13% 80% 0 10%;
-    padding: 4%;
+h2{
+    margin: 7% 80% 0 -50%;
+    padding: 8%;
     background-color: rgb(255, 255, 148);
     border-radius: 5px;
     z-index: 1;
-    position: absolute;
     font-family: 'Josefin Sans', sans-serif;
     font-size: 30px;
     color:rgb(59, 59, 59);
@@ -20,7 +19,6 @@ body {
 }
 
 article {
-    position: absolute;
     margin: 10% 15% 10% 20%;
     padding: 3% 5% 3% 15%;
     border-style: solid;
@@ -47,8 +45,23 @@ article a:hover {
     border: none;
 }
 
+.date {
+    margin: 0 5% 0 0;
+    text-align: right;
+}
+
 .additionalInfo {
     padding: 1.3em;
     background-color: rgb(239, 239, 239);
     border-radius: 5px;
+}
+
+#article_one {
+    display: flex;
+    flex-direction: column;
+}
+
+#article_two {
+    display: flex;
+    flex-direction: column;
 }
