--- a/studio1/styles.css
+++ b/studio1/styles.css
@@ -8,7 +8,7 @@ body {
 /* Introduction page with title, image, and a button */
 
 #intro {
-    display: block;
+    display: none;
 }
 
 #intro header {
@@ -46,7 +46,7 @@ body {
 /* Input page with different input sections */
 
 #input {
-    display:none;
+    display:block;
 }
 
 #input header {
@@ -64,7 +64,7 @@ body {
     left: 50px;
 }
 
-#input main {
+#input form {
     margin: 3em 10em 0  12em;
     text-align: center;
     color: white;
