--- a/studio1/styles.css
+++ b/studio1/styles.css
@@ -5,12 +5,19 @@ body {
     font-family: 'Short Stack', cursive;
 }
 
-/* Introduction page with title, image, and a button */
+.button:hover {
+    cursor: pointer;
+}
 
-#intro {
+.show {
+    display: block;
+}
+
+.hide {
     display: none;
 }
 
+/* Introduction page with title, image, and a button */
 #intro header {
     margin: 3em 10em auto 10em;
     text-align: center;
@@ -45,10 +52,6 @@ body {
 
 /* Input page with different input sections */
 
-#input {
-    display:block;
-}
-
 #input header {
     margin: 3em 4em auto 4em;
     text-align: center;
@@ -69,7 +72,20 @@ body {
     text-align: center;
     color: white;
     font-size: 25px;
-    line-height: 50px;
+    line-height: 40px;
+}
+
+#input input {
+    color: white;
+}
+
+input#submitButton {
+    color: black;
+}
+
+#submitButton:hover{
+    box-shadow: 0 0 6px #000 inset;
+    cursor: pointer;
 }
 
 input[type="text"] {
@@ -80,19 +96,12 @@ input[type="text"] {
     background-color: transparent;
     }
 
-/* just a note to myself = I want the cursor to change shape when it hovers over each line of the form, and I want the insertion bar to be thick&white once it is clicked */
-
 /* Output page where user receives the message */
-#output {
-    display: none;
-}
-
-#output p {
+#output article {
     margin: 8em 12em 0  15em;
     color: black;
     font-size: 18px;
     line-height: 30px;
-    
 }
 
 #output img {
@@ -103,18 +112,10 @@ input[type="text"] {
 }
 
 #output p.button {
-    margin: 4em 12em 0 12em;
+    margin: 25em 12em 0 12em;
     padding: 0.5em;
     text-align: center;
     color: white;
     font-size: 25px;
 }
 
-#output p.button:hover {
-    padding: 0.5em;
-    color: white;
-    border-style: solid;
-    border-width: 3px;
-    border-radius: 5px;
-    border-color: white;
-}
