--- a/studio1/styles.css
+++ b/studio1/styles.css
@@ -2,7 +2,7 @@ body {
     background-image: url(images/background.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    font-family: 'Short Stack', cursive;
+    font-family: 'Gaegu', cursive;
 }
 
 .button:hover {
@@ -34,11 +34,11 @@ body {
 }
 
 #intro p {
-    margin: 16.5em 14em 0 14em;
+    margin: 13.5em 14em 0 14em;
     padding: 0.5em;
     text-align: center;
     color: white;
-    font-size: 28px;
+    font-size: 33px;
 }
 
 #intro p:hover {
@@ -68,23 +68,28 @@ body {
 }
 
 #input form {
-    margin: 3em 10em 0  12em;
+    margin: 2em 0em 0  0em;
     text-align: center;
     color: white;
-    font-size: 25px;
-    line-height: 40px;
+    font-size: 30px;
+    line-height: 35px;
 }
 
 #input input {
     color: white;
+    margin-left: 0;
 }
 
 input#submitButton {
+    margin: 0.1em 5em 0 5em;
+    padding: 0.5em;
+    text-align: center;
+    font-size: 28px;
     color: black;
 }
 
 #submitButton:hover{
-    box-shadow: 0 0 6px #000 inset;
+    box-shadow: 0 0 6px rgb(179, 179, 179) inset;
     cursor: pointer;
 }
 
@@ -92,16 +97,16 @@ input[type="text"] {
     margin: 0.5em;
     border: none;
     border-bottom: 1px solid white;
-    width: 40%;
+    width: 20%;
     background-color: transparent;
     }
 
 /* Output page where user receives the message */
 #output article {
-    margin: 8em 12em 0  15em;
+    margin: 5.5em 9em 0  10em;
     color: black;
-    font-size: 18px;
-    line-height: 30px;
+    font-size: 25px;
+    line-height: 35px;
 }
 
 #output img {
@@ -111,11 +116,20 @@ input[type="text"] {
     left: 170px;
 }
 
-#output p.button {
-    margin: 25em 12em 0 12em;
+p#again.button{
+    margin: 4em 15em 0 14em;
     padding: 0.5em;
     text-align: center;
     color: white;
     font-size: 25px;
+}
+
+p#again:hover {
+    padding: 0.5em;
+    color: white;
+    border-style: solid;
+    border-width: 3px;
+    border-radius: 5px;
+    border-color: white;
 }
 
