--- a/studio1/styles.css
+++ b/studio1/styles.css
@@ -5,12 +5,8 @@ body {
     font-family: 'Gaegu', cursive;
 }
 
-.button:hover {
-    cursor: pointer;
-}
-
 .show {
-    display: block;
+    /* display: block; */
 }
 
 .hide {
@@ -18,32 +14,39 @@ body {
 }
 
 /* Introduction page with title, image, and a button */
-#intro header {
-    margin: 3em 10em auto 10em;
+header {
     text-align: center;
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%, -50%);
+} 
+
+header h1 {
+    margin-bottom: 2em;
     color: white;
     font-family: 'Rock Salt', cursive;
     font-size: 39px;
 }
 
-#intro img {
-    position: absolute;
-    z-index: 1;
-    top: 30%;
-    left: 40%;
+header img {
+    display:block;
+    margin-bottom: 2em;
 }
 
-#intro p {
-    margin: 13.5em 14em 0 14em;
+
+#intro button {
     padding: 0.5em;
     text-align: center;
     color: white;
     font-size: 33px;
+    border:none;
+    border:3px solid transparent;
+    background-color: transparent;
 }
 
-#intro p:hover {
-    padding: 0.5em;
-    color: white;
+#intro button:hover {
+    cursor: pointer;
     border-style: solid;
     border-width: 3px;
     border-radius: 5px;
@@ -52,8 +55,9 @@ body {
 
 /* Input page with different input sections */
 
-#input header {
-    margin: 3em 4em auto 4em;
+#input h2 {
+    display: block;
+    margin-top:5%;
     text-align: center;
     color: white;
     font-family: 'Rock Salt', cursive;
@@ -62,7 +66,6 @@ body {
 
 #input img {
     position: absolute;
-    z-index: 1;
     top: 500px;
     left: 50px;
 }
@@ -81,16 +84,21 @@ body {
 }
 
 input#submitButton {
-    margin: 0.1em 5em 0 5em;
     padding: 0.5em;
     text-align: center;
-    font-size: 28px;
-    color: black;
+    color: white;
+    font-size: 33px;
+    border:none;
+    border:3px solid transparent;
+    background-color: transparent;
 }
 
 #submitButton:hover{
-    box-shadow: 0 0 6px rgb(179, 179, 179) inset;
     cursor: pointer;
+    border-style: solid;
+    border-width: 3px;
+    border-radius: 5px;
+    border-color: white;
 }
 
 input[type="text"] {
@@ -102,34 +110,49 @@ input[type="text"] {
     }
 
 /* Output page where user receives the message */
+
+/* I NEED HELP ON THIS SECTION OF THE CODE */
+#output {
+    /* position: relative; */
+    text-align: center;
+    /* top: 50%; */
+    /* left: 50%; */
+    /* transform: translate(-50%,-50%); */
+}
+
 #output article {
-    margin: 5.5em 9em 0  10em;
+    margin: 3% auto auto auto;
     color: black;
+    text-align: left;
     font-size: 25px;
     line-height: 35px;
+    width: 65vw;
+    background-image: url(images/paper.svg);
+    z-index: 2;
+    padding: 4rem;
+    background-size: cover;
 }
 
 #output img {
-    position: absolute;
+    width: 70%;
+    display: none;
     z-index: -1;
-    top: 70px;
-    left: 170px;
 }
 
-p#again.button{
-    margin: 4em 15em 0 14em;
+#output button{
     padding: 0.5em;
-    text-align: center;
+    margin-top: 5%;
     color: white;
     font-size: 25px;
+    border:none;
+    border:3px solid transparent;
+    background-color: transparent;
 }
 
-p#again:hover {
-    padding: 0.5em;
-    color: white;
+#output button:hover {
+    cursor: pointer;
     border-style: solid;
     border-width: 3px;
     border-radius: 5px;
     border-color: white;
 }
-
