--- a/journal/styles.css
+++ b/journal/styles.css
@@ -56,3 +56,7 @@ article a:hover {
     background-color: rgb(239, 239, 239);
     border-radius: 5px;
 }
+
+.breakline {
+    text-align: center;
+}
