--- a/studio2/styles.css
+++ b/studio2/styles.css
@@ -1,3 +1,45 @@
+/* header {
+    text-align: center;
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%, -50%);
+} 
+
+header img {
+    border: 7px;
+    border-style:groove;
+    border-color:rgb(144, 187, 255);
+}
+
+button {
+    padding: 0.5em;
+    margin-top: 1em;
+    font-family: 'Mali', cursive;
+    text-align: center;
+    color: black;
+    font-size: 20;
+    border:none;
+    border:1px solid transparent;
+    background-color: transparent;
+}
+
+button:hover {
+    cursor: pointer;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 5px;
+    border-color: black;
+} */
+
+/* .show {
+    display: block;
+}
+
+.hide {
+    display: none;
+} */
+
 main {
 	width: 40vw;
 }
