card images changed, div widths are better

--- a/studio3/styles.css
+++ b/studio3/styles.css
@@ -57,7 +57,8 @@ div p {
 }
 
 button#startgame {
-    width: auto;
+    margin: auto;
+    width: 50%;
 }
 
 #begin {
@@ -65,20 +66,27 @@ button#startgame {
     width: 16vw;
 }
 
-#gamecontrol {
+div#gamecontrol {
     background-color: brown;
     display: flex;
     flex-direction: column;
+    /* text-align: center; */
 }
 
 button#quit {
     margin: 0 0 0 70%;
-    width: 30vw;
+    width: 25vw;
     font-size: 20px;
 }
 
 #game {
     background-color: brown;
+    text-align: center;
+}
+
+#game img {
+    width: 10vw;
+    height: auto;
 }
 
 #score {
@@ -86,7 +94,7 @@ button#quit {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    height: 48vh;
+    height: 26vh;
 }
 
 #player1, #player2 {
@@ -97,13 +105,22 @@ button#quit {
 #player1 {
     margin: 0;
     background-image: url("images/player1.png");
-    background-size: 40%;
+    background-size: 18%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+#player2 {
+    margin: 0;
+    background-image: url("images/player2.png");
+    background-size: 18%;
     background-repeat: no-repeat;
     background-position: center;
 }
 
 
 #actions {
+    padding: 0.6%;
     background-color: rgb(44, 44, 44);
     display: flex;
     justify-content: center;
