--- a/studio2/styles.css
+++ b/studio2/styles.css
@@ -1,4 +1,4 @@
-/* header {
+header {
     text-align: center;
     position:absolute;
     top:50%;
@@ -30,15 +30,15 @@ button:hover {
     border-width: 1px;
     border-radius: 5px;
     border-color: black;
-} */
+}
 
-/* .show {
+.show {
     display: block;
 }
 
 .hide {
     display: none;
-} */
+}
 
 main {
 	width: 40vw;
